<resources>
    <string name="app_name">Meditation App</string>
    <string name="we_are_what_we_do">We are what we do</string>
    <string name="thousand_of_people">Thousand of people are usign silent moon for smalls meditation</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="woman_relaxing_while_listening_to_meditation">Woman relaxing while listening to meditation</string>
    <string name="silent_moon_logo">Silent Moon App Logo</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or_log_in_with_email">Or log in with email</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="background_image_with_geometric_forms">Background image with geometric forms</string>
    <string name="to_silent_moon">to Silent Moon</string>
    <string name="hi_user_welcome">Hi User, Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="explore_the_app">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="woman_in_lotus_position_background">Woman in lotus position</string>
</resources>