<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_main_imageview_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/woman_relaxing_while_listening_to_meditation"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_sign_up_sign_in_logo"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/activity_main_imageview_logo"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/silent_moon_logo"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.00999999"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/activity_main_textview_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:text="@string/we_are_what_we_do"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_imageview_background" />

        <TextView
            android:id="@+id/activity_main_textview_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="58dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/thousand_of_people"
            android:textAlignment="center"
            android:textColor="#A1A4B2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_textview_title"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/activity_main_button_signup"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button_purple"
            android:text="@string/sign_up"
            android:textColor="@color/pearl"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_textview_subtitle"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/activity_main_haveaccount_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/already_have_an_account"
            android:textAllCaps="true"
            android:textColor="#A1A4B2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_main_textview_login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_button_signup"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/activity_main_textview_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="#8E97FD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/activity_main_haveaccount_textview"
            app:layout_constraintTop_toBottomOf="@+id/activity_main_button_signup"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
