<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/periwinkle_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/activity_welcome_imageview_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_welcomeview_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/woman_in_lotus_position_background"/>

        <ImageView
            android:id="@+id/activity_welcome_imageview_logo"
            android:layout_height="30dp"
            android:layout_width="0dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/silent_moon_logo"
            />

        <TextView
            android:id="@+id/activity_welcome_textview_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hi_user_welcome"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="30sp"
            android:textColor="@color/champagne"
            android:layout_marginHorizontal="20dp"
            android:textStyle="normal"
            android:lineSpacingMultiplier="1.37"
            android:shadowColor="#FFECCC"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            app:layout_constraintTop_toBottomOf="@id/activity_welcome_imageview_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="75dp"
            />

        <TextView
            android:id="@+id/activity_welcome_textview_to_silent_moon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/to_silent_moon"
            android:textAlignment="center"
            android:fontFamily="sans-serif-thin"
            android:textSize="30sp"
            android:textColor="@color/champagne"
            android:layout_marginHorizontal="20dp"
            android:textStyle="normal"
            android:lineSpacingMultiplier="1.37"
            android:letterSpacing="0.01"
            android:shadowColor="#FFECCC"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="1"
            app:layout_constraintTop_toBottomOf="@id/activity_welcome_textview_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/explore_the_app"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:textSize="16sp"
            android:textColor="@color/champagne"
            android:layout_marginHorizontal="20dp"
            android:textStyle="normal"
            android:lineSpacingMultiplier="1.69"
            android:letterSpacing="0.01"
            android:shadowColor="#FFECCC"
            android:shadowDx="0.15"
            android:shadowDy="0.15"
            android:shadowRadius="1"
            app:layout_constraintTop_toBottomOf="@id/activity_welcome_textview_to_silent_moon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/activity_welcome_imageview_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="20dp"
            android:text="@string/get_started"
            android:textColor="@color/bright_grey"
            android:background="@drawable/rounded_button_blue"
            android:backgroundTint="@color/dawn_pink"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>